carrierwave gem doesn't work. Action.rb updated to include seller/:id page

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,24 @@
-<h1>Home Page</h1>
+<h1>Look at this freakin' Home Page</h1>
+
+<div id="index-banner">
+  <div id="slider">
+   <figure>
+      <img src="http://demosthenes.info/assets/images/austin-fireworks.jpg" alt="">
+      <img src="http://demosthenes.info/assets/images/taj-mahal.jpg" alt="">
+      <img src="http://demosthenes.info/assets/images/ibiza.jpg" alt="">
+      <img src="http://demosthenes.info/assets/images/ankor-wat.jpg" alt="">
+      <img src="http://demosthenes.info/assets/images/austin-fireworks.jpg" alt="">
+   </figure>
+  </div>
+
+  <div id="slider2">
+   <figure>
+    <img src="http://demosthenes.info/assets/images/austin-fireworks.jpg" alt="">
+    <img src="http://demosthenes.info/assets/images/taj-mahal.jpg" alt="">
+    <img src="http://demosthenes.info/assets/images/ibiza.jpg" alt="">
+    <img src="http://demosthenes.info/assets/images/ankor-wat.jpg" alt="">      
+    <img src="http://demosthenes.info/assets/images/austin-fireworks.jpg" alt="">
+   </figure>
+  </div>
+
+</div>
