--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -6,3 +6,56 @@
   margin-top: 200px;
 }
 
+@keyframes slidy {
+  0% { left: 0%; }
+  20% { left: 0%; }
+  25% { left: -100%; }
+  45% { left: -100%; }
+  50% { left: -200%; }
+  70% { left: -200%; }
+  75% { left: -300%; }
+  95% { left: -300%; }
+  100% { left: -400%; }
+}
+
+#index-banner{
+  width: 900px;
+  height: 500px;
+  margin-left: 80px;
+}
+
+#slider {
+  height: 500px;
+  width: 500px;
+} 
+
+#slider2 {
+  height: 250px;
+  width: 800px;
+}
+
+body { margin: 0; } 
+div#slider { overflow: hidden; }
+div#slider figure img { width: 20%; float: left; }
+div#slider figure { 
+  position: relative;
+  width: 500%;
+  margin: 0;
+  left: 0;
+  text-align: left;
+  font-size: 0;
+  animation: 20s slidy infinite; 
+}
+
+div#slider2 { overflow: hidden; }
+div#slider2 figure img { width: 20%; float: right; }
+div#slider2 figure { 
+  position: relative;
+  width: 500%;
+  margin: 0;
+  left: 0;
+  text-align: left;
+  font-size: 0;
+  animation: 20s slidy infinite; 
+}
+
