--- a/app/views/sellers/edit.erb
+++ b/app/views/sellers/edit.erb
@@ -1,4 +1,7 @@
-<form id="new_sellers" method="post" action="/sellers/new">
+<h1>Edit seller information</h1>
+
+<form id="new_sellers" method="post" action="/sellers/<%= @seller.id %>/edit">
+<input type="hidden" name="_method" value="put">
   <div class="row">
     <div class="large-12 columns">
       <label name="name">Name
@@ -6,27 +9,18 @@
       </label>
     </div>
   </div>
-   <div class="row">
-    <div class="large-12 columns">
-      <label name="location">Location
-        <input type="text" placeholder="Add Name Here" name="location" value="<%= @seller && @seller.location %>"/>
-      </label>
-    </div>
-  </div>
   <div class="row">
     <div class="large-4 columns">
-      <label name="image">Image
-        <input type="file" placeholder="Add Location Here" name="image" value="<%= @seller && @seller.image %>"/>
+      <label name="location">Location
+        <input type="text" placeholder="Add Location Here" name="location" value="<%= @seller && @seller.location %>"/>
       </label>
     </div>
-  </div>
-  <div class="row"> 
-   <div class="large-6 columns">
+    <div class="large-4 columns">
       <label name="blurb">Brief Intro
         <input type="text" placeholder="Give us a breief introduction - MAX 140 characters" name="blurb" value="<%= @seller && @seller.blurb %>"/>
       </label>
     </div>
-    <div class="large-6 columns">
+    <div class="large-4 columns">
       <div class="row collapse">
         <label name="video">Video URL
           <input type="url" placeholder="Your video goes here.." name="video" value="<%= @seller && @seller.video%>"/>
@@ -56,3 +50,4 @@
      <button class="button success" id="sellers_submit" type="submit">Submit</button>
   </div>
 </form>
+
