--- a/app/views/sellers/show.erb
+++ b/app/views/sellers/show.erb
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <p>Show</p>
 =======
 <p><%= @seller.name %></p>
@@ -10,6 +9,8 @@
    <input type="submit" value="Delete this post">
 </form>
 
+<a href="/sellers/<%= @seller.id %>/edit">Edit</a>
+
+
 
 <iframe width="420" height="315" src="<%= @seller.video %>" allowfullscreen></iframe>
->>>>>>> 9ab80f0eb2485d73aa684a37f6c1fd5ef077aa1d
