--- a/app/views/sellers/new.erb
+++ b/app/views/sellers/new.erb
@@ -1,33 +1,33 @@
 <form id="new_sellers" method="post" action="/sellers/new">
   <div class="row">
-    <div class="large-12 columns">
+    <div class="small-12 columns">
       <label name="name">Name
         <input type="text" placeholder="Add Name Here" name="name" value="<%= @seller && @seller.name %>"/>
       </label>
     </div>
   </div>
    <div class="row">
-    <div class="large-12 columns">
+    <div class="small-12 columns">
       <label name="location">Location
         <input type="text" placeholder="Add Name Here" name="location" value="<%= @seller && @seller.location %>"/>
       </label>
     </div>
   </div>
   <div class="row">
-    <div class="large-4 columns">
+    <div class="small-4 columns">
       <label name="image">Image
         <input type="file" placeholder="Add Location Here" name="image" value="<%= @seller && @seller.image %>"/>
       </label>
     </div>
   </div>
   <div class="row"> 
-   <div class="large-6 columns">
+   <div class="small-6 columns">
       <label name="blurb">Brief Intro
         <input type="text" placeholder="Give us a breief introduction - MAX 140 characters" name="blurb" value="<%= @seller && @seller.blurb %>"/>
       </label>
     </div>
-    <div class="large-6 columns">
-      <div class="row collapse">
+    <div class="small-6 columns">
+      <div class="row">
         <label name="video">Video URL
           <input type="url" placeholder="Your video goes here.." name="video" value="<%= @seller && @seller.video%>"/>
         </label>
@@ -35,7 +35,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="large-12 columns">
+    <div class="small-12 columns">
       <label name="specialty">Specialty (What is your best skill?)
         <select>
           <option value="Jewellery" selected="selected">Jewellery</option>
@@ -48,11 +48,13 @@
     </div>
   </div>
   <div class="row">
-    <div class="large-12 columns">
+    <div class="small-12 columns">
       <label name="story">Story
         <textarea placeholder="small-12.columns" name="story"></textarea>
       </label>
     </div>
-     <button class="button success" id="sellers_submit" type="submit">Submit</button>
+    <div class="row">
+      <div class="small-6 small-offset-5"><button class="button success" id="sellers_submit" type="submit">Submit</button></div>
+    </div>
   </div>
 </form>
