--- a/app/views/sellers/new.erb
+++ b/app/views/sellers/new.erb
@@ -1,4 +1,4 @@
-<form id="new_sellers" method="post" action="/sellers/new">
+<form id="new_sellers" method="post" action="/sellers/new" enctype="multipart/form-data">
   <div class="row">
     <div class="large-12 columns">
       <label name="name">Name
@@ -15,8 +15,8 @@
   </div>
   <div class="row">
     <div class="large-4 columns">
-      <label name="image">Image
-        <input type="file" placeholder="Add Location Here" name="image" value="<%= @seller && @seller.image %>"/>
+      <label name="file">Image
+        <input type="file" name="file" />
       </label>
     </div>
   </div>
