--- a/app/views/sellers/show.erb
+++ b/app/views/sellers/show.erb
@@ -10,7 +10,6 @@
 </form>
 
 <a href="/sellers/<%= @seller.id %>/edit">Edit</a>
+<img src="<%= @seller.image %>"  />
 
 
-
-<iframe width="420" height="315" src="<%= @seller.video %>" allowfullscreen></iframe>
