New Tables and File Uploader Works

--- a/app/views/products/new.erb
+++ b/app/views/products/new.erb
@@ -1,4 +1,4 @@
-<form id="new_products">
+<form id="new_products" method="post" action="/products/new">
   <div class="row">
     <div class="large-12 columns">
       <label>Input Label
