--- a/app/views/sellers/show.erb
+++ b/app/views/sellers/show.erb
@@ -10,6 +10,6 @@
 </form>
 
 <a href="/sellers/<%= @seller.id %>/edit">Edit</a>
-<img src="<%= @seller.image %>"  />
+<img src="<%=Image.find_by(@seller.id).file_path%>">
 
 
