--- a/app/views/products/new.erb
+++ b/app/views/products/new.erb
@@ -1,63 +1,45 @@
-<form id="new_products" method="post" action="/products/new">
+<form id="new_products" method="post" action="/products/new" enctype="multipart/form-data">
   <div class="row">
-    <div class="large-12 columns">
-      <label>Input Label
-        <input type="text" placeholder="large-12.columns" />
+    <div class="small-6 columns">
+      <label name="name">Name
+        <input type="text" placeholder="Add Product Name Here" name="name" value="<%= @product && @product.name %>"/>
+      </label>
+    </div>
+    <div class="small-6 columns">
+      <label name="price">Price
+        <input type="number" placeholder="Add Product Price Here" name="name" value="<%= @product && @product.name %>"/>
+      </label>
+    </div>
+  </div>
+   <div class="row">
+    <div class="small-12 columns">
+      <label name="description">Description
+        <textarea placeholder="Add a brief product description" name="description"></textarea>
       </label>
     </div>
   </div>
   <div class="row">
-    <div class="large-4 columns">
-      <label>Input Label
-        <input type="text" placeholder="large-4.columns" />
+    <div class="small-3 columns small-centered columns">
+      <label name="file">Image
+        <input type="file" name="file" />
       </label>
-    </div>
-    <div class="large-4 columns">
-      <label>Input Label
-        <input type="text" placeholder="large-4.columns" />
-      </label>
-    </div>
-    <div class="large-4 columns">
-      <div class="row collapse">
-        <label>Input Label</label>
-        <div class="small-9 columns">
-          <input type="text" placeholder="small-9.columns" />
-        </div>
-        <div class="small-3 columns">
-          <span class="postfix">.com</span>
-        </div>
-      </div>
     </div>
   </div>
-  <div class="row">
-    <div class="large-12 columns">
-      <label>Select Box
-        <select>
-          <option value="husker">Husker</option>
-          <option value="starbuck">Starbuck</option>
-          <option value="hotdog">Hot Dog</option>
-          <option value="apollo">Apollo</option>
+  <div class="row"> 
+    <div class="small-12 columns">
+      <label name="category">Category
+        <select name="category">
+          <option value="Jewellery" selected="selected">Jewellery</option>
+          <option value="Sculpture">Sculpture</option>
+          <option value="Clothing and Accessories">Clothing and Accessories</option>
+          <option value="Paintings/ Batik">Paintings/ Batik</option>
+          <option value="Woven Products">Woven Products</option>
+          <option value="Other">Other</option>
         </select>
       </label>
     </div>
   </div>
-  <div class="row">
-    <div class="large-6 columns">
-      <label>Choose Your Favorite</label>
-      <input type="radio" name="pokemon" value="Red" id="pokemonRed"><label for="pokemonRed">Red</label>
-      <input type="radio" name="pokemon" value="Blue" id="pokemonBlue"><label for="pokemonBlue">Blue</label>
-    </div>
-    <div class="large-6 columns">
-      <label>Check these out</label>
-      <input id="checkbox1" type="checkbox"><label for="checkbox1">Checkbox 1</label>
-      <input id="checkbox2" type="checkbox"><label for="checkbox2">Checkbox 2</label>
-    </div>
-  </div>
-  <div class="row">
-    <div class="large-12 columns">
-      <label>Textarea Label
-        <textarea placeholder="small-12.columns"></textarea>
-      </label>
-    </div>
+    <div class="row">
+      <div class="small-6 small-offset-5"><button class="button success" id="sellers_submit" type="submit">Submit</button></div>
   </div>
 </form>
