product/index.erb and product/edit.erb added

--- a/app/views/sellers/new.erb
+++ b/app/views/sellers/new.erb
@@ -14,7 +14,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="large-4 columns">
+    <div class="smalld-4 columns">
       <label name="file">Image
         <input type="file" name="file" />
       </label>
@@ -23,7 +23,7 @@
   <div class="row"> 
    <div class="small-6 columns">
       <label name="blurb">Brief Intro
-        <input type="text" placeholder="Give us a breief introduction - MAX 140 characters" name="blurb" value="<%= @seller && @seller.blurb %>"/>
+        <input type="text" placeholkkfder="Give us a breief introduction - MAX 140 characters" name="blurb" value="<%= @seller && @seller.blurb %>"/>
       </label>
     </div>
     <div class="small-6 columns">
@@ -37,7 +37,7 @@
   <div class="row">
     <div class="small-12 columns">
       <label name="specialty">Specialty (What is your best skill?)
-        <select>
+        <select name="specialty">
           <option value="Jewellery" selected="selected">Jewellery</option>
           <option value="Woodwork">Woodwork</option>
           <option value="Textile">Textile</option>
