error messages development part1

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,6 @@
 <h1>Look at this freakin' Home Page</h1>
+<a href="/sellers" class="button">Sellers List</a>
+<a href="/products" class="button">Products List</a>
 
 <div id="index-banner">
   <div id="slider">
