--- a/app/views/products/new.erb
+++ b/app/views/products/new.erb
@@ -38,8 +38,10 @@
         </select>
       </label>
     </div>
-  </div>
+  </div>    
     <div class="row">
-      <div class="small-6 small-offset-5"><button class="button success" id="sellers_submit" type="submit">Submit</button></div>
-  </div>
+      <div class="small-6 small-offset-5"><button class="button success" id="sellers_submit" type="submit">Submit</button>
+      </div>
+    </div>
+
 </form>
