--- a/app/views/sellers/index.erb
+++ b/app/views/sellers/index.erb
@@ -1,3 +1,7 @@
+<a href="/" class="button">Home</a>
+<a href="/sellers/new" class="button">Add a new seller</a>
+<hr />
+
 <% @seller.each do |seller| %>
  <a href="/sellers/<%= seller.id %>"><p><%= seller.name %></p></a>
   <p><%= seller.location %></p> 
@@ -8,6 +12,3 @@
     <input type="submit" value="Delete this post">
   </form>
 <% end %>
-
-
-<a href="/sellers/new">Add a new seller</a>
