minor migration changes

--- a/app/views/sellers/show.erb
+++ b/app/views/sellers/show.erb
@@ -9,8 +9,8 @@
 
 <a href="/sellers/<%= @seller.id %>/edit">Edit</a>
 
-<% @seller.images.each do |image| %>
-  <img src="<%=image.file_path%>">
-<%end%>
+
+<img src="<%=@seller.image%>">
+
 
 
