--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -27,12 +27,12 @@
         <!-- whatever you want goes here -->
         <nav class="left-off-canvas-menu">
           <ul class="off-canvas-list">
-          <li><label>Foundation</label></li>
-          <li><a href="#">The Psychohistorians</a></li>
-          <li><a href="#">The Encyclopedists</a></li>
-          <li><a href="#">The Mayors</a></li>
-          <li><a href="#">The Traders</a></li>
-          <li><a href="#">The Merchant Princes</a></li>
+          <li><label>Pamoja</label></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/products">Products List</a></li>
+          <li><a href="/products/new">Add Product</a></li>
+          <li><a href="/sellers">Sellers List</a></li>
+          <li><a href="/sellers/new">Add Seller</a></li>
         </ul>
       </nav>
  <!--    </aside> -->
