--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -26,38 +26,15 @@
   float: left;
 }
 
-#index-banner{
-  width: 900px;
-  height: 500px;
-  margin-left: 80px;
-}
-
-#slider {
-  height: 500px;
-  width: 500px;
-} 
-
-#slider2 {
-  height: 250px;
-  width: 800px;
+.slider {
+  max-height: 100%;
+  max-width: 100%;
 }
 
 body { margin: 0; } 
 div#slider { overflow: hidden; }
-div#slider figure img { width: 20%; float: left; }
+div#slider figure img { width: 20%; float: right; }
 div#slider figure { 
-  position: relative;
-  width: 500%;
-  margin: 0;
-  left: 0;
-  text-align: left;
-  font-size: 0;
-  animation: 20s slidy infinite; 
-}
-
-div#slider2 { overflow: hidden; }
-div#slider2 figure img { width: 20%; float: right; }
-div#slider2 figure { 
   position: relative;
   width: 500%;
   margin: 0;
