--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,3 @@
-<br>
 <div class="row">
   <div class ="medium-12 slider">
   <div id="slider">
@@ -11,4 +10,10 @@
    </figure>
   </div>
   </div>
+</div>
+
+<div id="banner">
+
+    <img src="/images/logo/pamoja_white.png">
+
 </div>
