--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -49,3 +49,23 @@ div#slider figure {
   font-size: 20;
 }
 
+
+
+#banner {
+  position: absolute;
+  top: 500px;
+  left: 0px;
+  right: 0px;
+  width: 100%;
+  height: 150px;
+  z-index: -1;
+  background-color: #418b2a;
+  }
+
+#banner img {
+  max-height: 120%;
+  max-width: 120%;
+  margin:-1% 0 0 25%;
+  text-align: center;
+}
+
