--- a/app/views/products/new.erb
+++ b/app/views/products/new.erb
@@ -56,7 +56,19 @@
         </select>
       </label>
     </div>
-  </div>    
+  </div>
+    <div class="row"> 
+    <div class="small-12 columns">
+      <label name="seller_id">Category
+        <select name="seller_id">
+        <% @sellers.each do |seller| %>
+          <option value="<%= seller.id %>" selected="selected">
+           ID:<%= @seller.id%> Name:<%= @seller.name%>
+          </option>
+        </select>
+      </label>
+    </div>
+  </div>      
     <div class="row">
       <div class="small-6 small-offset-5"><button class="button success" id="sellers_submit" type="submit">Submit</button>
       </div>
