--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class ="medium-12 slider">
+  <div class ="slider">
   <div id="slider">
    <figure>
     <% @products.each do |product| %>
@@ -13,7 +13,5 @@
 </div>
 
 <div id="banner">
-
-    <img src="/images/logo/pamoja_white.png">
-
+  <img src="/images/logo/pamoja_white.png">
 </div>
