--- a/app/views/products/new.erb
+++ b/app/views/products/new.erb
@@ -45,33 +45,31 @@
   </div>
   <div class="row"> 
     <div class="small-12 columns">
-      <label name="category">Category
-        <select name="category">
-          <option value="Jewellery" selected="selected">Jewellery</option>
-          <option value="Sculpture">Sculpture</option>
-          <option value="Clothing and Accessories">Clothing and Accessories</option>
-          <option value="Paintings/ Batik">Paintings/ Batik</option>
-          <option value="Woven Products">Woven Products</option>
-          <option value="Other">Other</option>
-        </select>
-      </label>
+      <label name="category">Category</label>
+      <select name="category">
+        <option value="Jewellery" selected="selected">Jewellery</option>
+        <option value="Sculpture">Sculpture</option>
+        <option value="Clothing and Accessories">Clothing and Accessories</option>
+        <option value="Paintings/ Batik">Paintings/ Batik</option>
+        <option value="Woven Products">Woven Products</option>
+        <option value="Other">Other</option>
+      </select>
     </div>
   </div>
+  <% if @sellers %>
     <div class="row"> 
-    <div class="small-12 columns">
-      <label name="seller_id">Category
+      <div class="small-12 columns">
+        <label name="seller_id">Pick a Seller</label>
         <select name="seller_id">
-        <% @sellers.each do |seller| %>
-          <option value="<%= seller.id %>" selected="selected">
-           ID:<%= @seller.id%> Name:<%= @seller.name%>
-          </option>
-        </select>
-      </label>
-    </div>
-  </div>      
+          <% @sellers.each do |seller| %>
+            <option value=<%= seller.id %>><%= seller.name %> ID:<%= seller.id %></option>
+          <% end %>
+        </select>     
+      </div>
+    </div>      
+  <% end %> 
     <div class="row">
       <div class="small-6 small-offset-5"><button class="button success" id="sellers_submit" type="submit">Submit</button>
       </div>
     </div>
-
 </form>
