--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -49,8 +49,6 @@ div#slider figure {
   font-size: 20;
 }
 
-
-
 #banner {
   position: absolute;
   top: 500px;
@@ -69,3 +67,9 @@ div#slider figure {
   text-align: center;
 }
 
+.product-img img{
+  width: 100%;
+  height: 400px ;
+  border-radius: 5px;
+  vertical-align: top;
+}
