--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -14,10 +14,11 @@
   <div class="inner-wrap">
     <nav class="tab-bar">
       <div class="left-small">
-        <a role="button" aria-expanded="false" aria-controls="idOfLeftMenu" class="left-off-canvas-toggle menu-icon" href="/" ><span></span></a>
+        <a role="button" aria-expanded="false" aria-controls="idOfLeftMenu" class="left-off-canvas-toggle menu-icon" >
+          <img src="/images/logo/menu-logo.png" /></a>
       </div>
       <section class="middle tab-bar-section">
-        <h1 class="title">Pamoja</h1>
+        <h1 class="title"></h1>
       </section>
     </nav>
   
