played around with index

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -13,5 +13,5 @@
 </div>
 
 <div id="banner">
-  <img src="/images/logo/pamoja_white.png">
+  <img src="/images/logo/pamoja_white.png" alt="pamoja">
 </div>
