Sellers profile page added, using sinatra'partials'

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -47,6 +47,18 @@
   <a class="exit-off-canvas"></a>
   </div>
 </div>
+
+<footer class="row">
+<div class="large-12 columns"><hr/>
+<div class="row">
+
+<div class="large-6 columns">
+<p>© Copyright no one at all. Go to town.</p>
+</div>
+
+</div>
+</div>
+</footer> 
 <script>
   $(document).foundation();
 </script>
