shopping cart added. routes being modified for adding items to cart

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -20,7 +20,10 @@
     <nav class="tab-bar">
       <div class="left-small">
         <a role="button" aria-expanded="false" aria-controls="idOfLeftMenu" class="left-off-canvas-toggle menu-icon" >
-          <img src="/images/logo/menu-logo.png" /></a>
+          <img src="/images/logo/menu-logo.png" /></a><br>
+          <% if create_cart%>
+          <a href="/cart/checkout"><p><%= "Cart 1"%></p></a>
+          <% end %>
       </div>
       <section class="middle tab-bar-section">
         <h1 class="title"></h1>
