--- a/app/views/cart/checkout.erb
+++ b/app/views/cart/checkout.erb
@@ -10,5 +10,6 @@
 
 <form method="post" action="/cart/checkout">
   <label></label>
-  <input></input
+  <input></input>
+  <button class="button success" id="sellers_submit" type="submit">Submit</button>
 </form>
