--- a/app/views/products/show.erb
+++ b/app/views/products/show.erb
@@ -21,7 +21,7 @@
       </ul>
 </form>
 
-<form action="/cart/item/add" method="POST">  
+<form method="post" action="/cart/item/add">  
       <input type="hidden" name="product_id" value="<%= @product.id %>">
       <ul class="right">
       <input type="submit" value="Add to cart" class="button">
