--- a/app/views/cart/index.erb
+++ b/app/views/cart/index.erb
@@ -1,2 +1,26 @@
 <p><%= @cart.id%></p>
 <p>Hellow World!</p>
+
+<%current_cart.items.each do |item|%>
+  <p> <%= item.product.name %> </p>
+  <img src="<%= item.product.images.first.file_path %>" />
+  <p> $<%= item.product.price %> </p>
+
+<%end%>
+
+
+
+
+
+
+
+
+
+
+
+
+<form method="post" action="/cart/checkout">
+  <label></label>
+  <input></input>
+  <button class="button success" id="sellers_submit" type="submit">Submit</button>
+</form>
