--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -22,7 +22,7 @@
         <a role="button" aria-expanded="false" aria-controls="idOfLeftMenu" class="left-off-canvas-toggle menu-icon" >
           <img src="/images/logo/menu-logo.png" /></a><br>
           <% if create_cart%>
-          <a href="/cart/checkout"><p><%= "Shopping Cart"%></p></a>
+          <a href="/cart"><p><%= "Shopping Cart"%></p></a>
           <% end %>
       </div>
       <section class="middle tab-bar-section">
@@ -48,7 +48,7 @@
             <li><a href="/sellers/new">Add Seller</a></li>
           <% end %>
           <% if create_cart%>
-            <li><a href="/cart/checkout"><%= "Shopping Cart"%></a></li>
+            <li><a href="/cart"><%= "Shopping Cart"%></a></li>
           <% end %>
         </ul>
       </nav>
